--- a/css/detailgenre.css
+++ b/css/detailgenre.css
@@ -14,6 +14,13 @@ header{
     position: sticky;
     top: 0;
 }
+h1{
+    font-size: 40px;
+    text-align: center;
+    color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-top: 10px;
+}
 .logo{
     margin: auto;
     height: 100px;
