--- a/css/index.css
+++ b/css/index.css
@@ -302,7 +302,8 @@ footer{
     }
     .triple{
         gap: 1px;
-        margin-top: 10px;
+        margin-top: -50px;
+        display: inline;
     }
     .total{
         grid-template-rows: 0.2fr 0.01fr 1fr 0.01fr;
@@ -321,6 +322,7 @@ footer{
     }
     .nombrecancion{
         display: block;
+        font-size: 15px;
     }
     
     .AgusLerej{
@@ -337,5 +339,15 @@ footer{
     .deezer{
         height: 15px;
         margin: auto;
+    }
+    .semititulos{
+        margin-top: 15px;
+    }
+    .portadaAlbum{
+        height: 100px;
+    }
+    .intermedio{
+        position: relative;
+        bottom: 90px;
     }
 }
