--- a/css/detailtrack.css
+++ b/css/detailtrack.css
@@ -34,8 +34,10 @@ body{
 section{
     display: grid;
     grid-template-columns: 1fr 3fr;
-    margin-top: 10px;
+    margin-top: px;
     gap: 20px;
+    border: solid white 1px;
+    padding: 25px;
 }
 .album{
     display: grid;
@@ -93,6 +95,9 @@ footer{
     display: grid;
     grid-template-columns: 2fr 1fr;
     margin-top: 10px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 .AgusLerej{
     margin: auto;
@@ -201,12 +206,15 @@ footer{
         grid-template-rows: 1fr 1.2fr;
         grid-template-columns: none;
         gap: 10px;
+        border: solid white 1px;
+        margin-top: 50px;
     }
     .album{
         margin: auto;
     }
     .fotoAlbum{
         height: 150px;
+        
     }
     h1{
         font-size: 25px;
