--- a/css/generos.css
+++ b/css/generos.css
@@ -1,6 +1,6 @@
 .total{
     display: grid;
-    grid-template-rows: 0.8fr 0.4fr 1.8fr 0.2fr;
+    grid-template-rows: 0.8fr 0.2fr 8fr 0.2fr;
 }
 header{
     display: grid;
@@ -63,7 +63,7 @@ footer{
 
 .generos{
     display: grid;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 .fila{
     margin: auto;
@@ -75,13 +75,25 @@ footer{
 .portadagenero{
     border-radius: 10px;
     margin: 20px;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    display: grid;
+    grid-template-rows: 1fr 0.3fr;
+    text-align: center;
+    gap: 2px;
+}
+img{
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 h1{
     font-size: 40px;
     text-align: center;
     color: white;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    margin-top: 10px;
+    margin-top: 5px;
 }
 @media(max-width: 768px){
     header{
