--- a/css/detailalbum.css
+++ b/css/detailalbum.css
@@ -1,6 +1,6 @@
 .total{
     display: grid;
-    grid-template-rows: 2fr 12fr 0.2fr;
+    grid-template-rows: 2fr 0.1fr 12fr 0.2fr;
     margin: auto;
 }
 header{
@@ -15,6 +15,10 @@ header{
     height: 100px;
     position: sticky;
     top: 0;
+}
+.buscador{
+    text-align: right;
+    margin-top: 10px;
 }
 .logo{
     margin: auto;
@@ -275,7 +279,7 @@ footer{
         margin: auto;
     }
     .total{
-        grid-template-rows: 0.2fr 3fr 0.1fr;
+        grid-template-rows: 0.2fr 0.1fr 3fr 0.1fr;
     }
     section{
         grid-template-columns: none;
