--- a/css/detailgenre.css
+++ b/css/detailgenre.css
@@ -14,6 +14,10 @@ header{
     position: sticky;
     top: 0;
 }
+.buscador{
+    margin-top: 10px;
+    text-align: right;
+}
 h1{
     font-size: 40px;
     text-align: center;
