--- a/css/detailtrack.css
+++ b/css/detailtrack.css
@@ -1,6 +1,6 @@
 .total{
     display: grid;
-    grid-template-rows: 2fr 4fr 0.2fr;
+    grid-template-rows: 2fr 0.1fr 4fr 1fr;
     margin: auto;
 }
 header{
@@ -15,6 +15,10 @@ header{
     height: 100px;
     position: sticky;
     top: 0;
+}
+.buscador{
+    text-align: right;
+    margin-bottom: 20px;
 }
 .logo{
     margin: auto;
@@ -33,15 +37,17 @@ body{
 }
 section{
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns:1fr 3fr;
     margin-top: px;
     gap: 20px;
     border: solid white 1px;
     padding: 25px;
+    margin-top: 30px;
+
 }
 .album{
     display: grid;
-    grid-template-rows: 1fr 0.5fr;
+    grid-template-rows: 1fr 0.1fr;
     margin-left: 20px;
 }
 .fotoAlbum{
@@ -82,7 +88,7 @@ h2{
     font-size: 30px;
     color: white;
 }
-button{
+.agregar{
     height: 60px;
     width: 200px;
     border-radius: 20px;
@@ -160,9 +166,7 @@ footer{
     .duracion{
         font-size: 20px;
     }
-    button{
-        height: 40px;
-    }
+    
     footer{
         margin-top: 10px;
     }
@@ -188,7 +192,7 @@ footer{
 }
 @media(max-width: 320px){
     .total{
-        grid-template-rows: 0.3fr 0.5fr 0.01fr ;
+        grid-template-rows: 0.3fr 0.1fr 0.5fr 0.01fr ;
     }
     header{
         display: grid;
@@ -203,11 +207,15 @@ footer{
         margin: auto;
     }
     section{
-        grid-template-rows: 1fr 1.2fr;
+        grid-template-rows: 1fr 0.8fr;
         grid-template-columns: none;
         gap: 10px;
         border: solid white 1px;
         margin-top: 50px;
+        border: transparent;
+        position: relative;
+        bottom: 50px;
+    
     }
     .album{
         margin: auto;
@@ -226,9 +234,14 @@ footer{
     .agregados{
         gap: 20px;
     }
-    button{
+    .agregar{
         width: 60px;
         height: 60px;
+        position: relative;
+        top: 10px;
+        right: 10px;
+        width: 100%;
+        
     }
     .AgusLerej{
         font-size: 10px;
@@ -245,5 +258,8 @@ footer{
     }
     footer{
 
+    }
+    .buscador{
+        margin-top: 20px;
     }
 }
