--- a/css/playlist.css
+++ b/css/playlist.css
@@ -1,6 +1,6 @@
 .total{
     display: grid;
-    grid-template-rows: 2fr 4fr 0.2fr;
+    grid-template-rows: 2fr 1fr 4fr 0.2fr;
 }
 
 header{
@@ -15,6 +15,9 @@ header{
     height: 100px;
     position: sticky;
     top: 0;
+}
+.buscador{
+    text-align: right;
 }
 .logo{
     margin: auto;
@@ -60,6 +63,9 @@ footer{
     display: grid;
     grid-template-columns: 2fr 1fr;
     margin-top: 10px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 .AgusLerej{
     margin: auto;
@@ -86,7 +92,7 @@ footer{
 @media(max-width: 768px){
     .total{
         display: grid;
-        grid-template-rows: 2fr 6fr 0.2fr;
+        grid-template-rows: 2fr 0.1fr 6fr 0.2fr;
     }
     header{
         height: 100px;
@@ -126,7 +132,8 @@ footer{
 }
 @media(max-width: 320px){
     .total{
-        grid-template-rows: 0.3fr 1.5fr 0.01fr;
+        grid-template-rows: 0.3fr 0.1fr 1.5fr 0.01fr;
+    display: grid;
     }
     header{
         display: grid;
@@ -143,6 +150,7 @@ footer{
     h2{
         font-size: 18px;
     }
+
     h3{
         font-size: 15px;
     }
@@ -160,5 +168,11 @@ footer{
     .deezer{
         height: 15px;
         margin: auto;
+    }
+    .Canciones{
+        width: 300px;
+    }
+    .buscador{
+        margin-top: 10px;
     }
 }
