--- a/css/generos.css
+++ b/css/generos.css
@@ -1,9 +1,10 @@
 .total{
     display: grid;
-    grid-template-rows: 0.8fr 0.1fr 0.4fr 1.8fr 0.2fr;
+    grid-template-rows: 0.4fr 0.2fr 0.2fr 8fr 0.2fr;
 }
 .buscador{
     text-align: right;
+    margin-top: 20px;
 }
 header{
     display: grid;
