--- a/css/generos.css
+++ b/css/generos.css
@@ -95,11 +95,12 @@ img{
 }
 h1{
     font-size: 40px;
-    text-align: center;
-    color: white;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    margin-top: 5px;
+text-align: center;
+color: white;
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+margin-top: 10px;
 }
+
 @media(max-width: 768px){
     header{
         position: static;
@@ -115,7 +116,11 @@ h1{
         height: 75px;
     }
     h1{
-        margin-top: 10px;
+        font-size: 40px;
+    text-align: center;
+    color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-top: 10px;
     }
     .fila{
         display: grid;
