--- a/css/index.css
+++ b/css/index.css
@@ -17,6 +17,11 @@ header{
     top: 0;
     z-index: 1;
 }
+h1{
+    font-size: 15px;
+    text-align: center;
+    color:black;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}
 .logo{
     margin: auto;
     height: 100px;
