--- a/css/detailgenre.css
+++ b/css/detailgenre.css
@@ -25,6 +25,12 @@ h1{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin-top: 10px;
 }
+h2{
+    font-size: 30px;
+    text-align: center;
+    color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
 .logo{
     margin: auto;
     height: 100px;
