--- a/css/generos.css
+++ b/css/generos.css
@@ -1,6 +1,6 @@
 .total{
     display: grid;
-    grid-template-rows: 0.4fr 0.2fr 0.2fr 8fr 0.2fr;
+    grid-template-rows: 0.4fr 0.1fr 0.2fr 8fr 0.2fr;
 }
 .buscador{
     text-align: right;
@@ -70,23 +70,15 @@ footer{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
 }
-.fila{
-    margin: auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    gap: 10px;
-    text-align: center;
-}
 .portadagenero{
     border-radius: 10px;
     margin: 20px;
-    font-size: 20px;
+    font-size: 30px;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
     display: grid;
     grid-template-rows: 1fr 0.3fr;
     text-align: center;
-    gap: 2px;
 }
 img{
     text-align: center;
@@ -95,10 +87,10 @@ img{
 }
 h1{
     font-size: 40px;
-text-align: center;
-color: white;
-font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-margin-top: 10px;
+    text-align: center;
+    color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-top: 10px;
 }
 
 @media(max-width: 768px){
@@ -110,22 +102,17 @@ margin-top: 10px;
     }
     .total{
         display: grid;
-        grid-template-rows: 0.4fr 0.5fr 4fr 0.2fr;
+        grid-template-rows: 0.4fr 0.1fr 0.3fr 10fr 0.2fr;
     }
     .logo{
         height: 75px;
     }
     h1{
-        font-size: 40px;
+    font-size: 40px;
     text-align: center;
     color: white;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin-top: 10px;
-    }
-    .fila{
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1f 1fr 1fr;
     }
     footer{
         margin-top: 10px;
@@ -152,7 +139,7 @@ margin-top: 10px;
 }
 @media(max-width:320px){
     .total{
-        grid-template-rows: 0.3fr 0.1fr 1.5fr 0.01fr;
+        grid-template-rows: 0.3fr 0.1fr 0.1fr 8fr 0.01fr;
     }
     header{
         display: grid;
@@ -165,6 +152,18 @@ margin-top: 10px;
     .logo{
         height: 50px;
         margin: auto;
+    }
+    .generos{
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    .portadagenero{
+        font-size: 15px;
+    }
+    img{
+        height: 85px;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
     }
     .AgusLerej{
         font-size: 10px;
