--- a/css/detailgenre.css
+++ b/css/detailgenre.css
@@ -1,5 +1,6 @@
 .total{
-    
+    display: grid;
+    grid-template-rows: 2fr 0.1fr 70fr 0.2fr;
 }
 header{
     display: grid;
@@ -49,6 +50,12 @@ body{
 .artists{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 10px;
+}
+img{
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 .nombre{
     color:white;
@@ -61,9 +68,6 @@ footer{
     display: grid;
     grid-template-columns: 2fr 1fr;
     margin-top: 10px;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
 }
 .AgusLerej{
     margin: auto;
@@ -86,4 +90,45 @@ footer{
 .redesSociales{
     text-align: right;
     padding-right: 10px;
+}
+@media(max-width: 768px){
+    header{
+        position: static;
+    }
+    .titulos{
+        font-size: 25px;
+    }
+    .total{
+        display: grid;
+        grid-template-rows: 2fr 0.1fr 70fr 0.2fr;
+    }
+    .logo{
+        height: 75px;
+    }
+    h1{
+        font-size: 40px;
+        text-align: center;
+        color: white;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        margin-top: 10px;
+    }
+    .AgusLerej{
+        font-size: 12px;
+        margin: auto;
+    }
+    .facebook{
+        height: 10px;
+        margin: auto;
+        padding: 5px;
+    }
+    .twitter{
+        height: 10px;
+        margin: auto;
+        padding: 5px;
+    }
+    .deezer{
+        height: 15px;
+        margin: auto;
+        padding: 5px;
+    }
 }
