--- a/css/index.css
+++ b/css/index.css
@@ -18,10 +18,13 @@ header{
     z-index: 1;
 }
 h1{
-    font-size: 15px;
     text-align: center;
     color:black;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-align: center;
+    font-size: 16px;
+    font-weight: none;
+}
 .logo{
     margin: auto;
     height: 100px;
