--- a/css/resultados.css
+++ b/css/resultados.css
@@ -24,16 +24,18 @@ footer{
     margin: auto;
 }
 ul{
-    color:white;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr ;
     
 }
-li{
+.li{
     text-decoration: none;
     display: grid;
     grid-template-rows: 4fr 1fr;
     text-align: center;
+}
+p{
+    color: white;
 }
 img{
     margin-left: auto;
