--- a/css/playlist.css
+++ b/css/playlist.css
@@ -34,13 +34,16 @@ a{
     text-align: center;
     color: black;  
 }
-.container{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 10px;
-    margin-top: 10px;
+h1{
+    color: white;
+    text-align: center;
 }
-.Canciones{
+h2{
+    font-size: 25px;
+    border: solid black 4px;
+    border-radius: 10px;
+}
+li{
     display: grid;
     grid-template-rows: 0.25fr 1fr 1fr 1fr;
    background-color: rgba(255, 68, 0, 0.61);
@@ -51,11 +54,7 @@ a{
     width: 500px;
     margin: auto;
 }
-h2{
-    font-size: 25px;
-    border: solid black 4px;
-    border-radius: 10px;
-}
+
 footer{
     background-color: rgba(255, 68, 0, 0.61);
     border-radius: 10px;
