--- a/css/playlist.css
+++ b/css/playlist.css
@@ -1,6 +1,6 @@
 .total{
     display: grid;
-    grid-template-rows: 2fr 1fr 4fr 0.2fr;
+    grid-template-rows: 2fr 1fr 10fr 0.2fr;
 }
 
 header{
@@ -15,6 +15,7 @@ header{
     height: 100px;
     position: sticky;
     top: 0;
+    z-index: 1;
 }
 .buscador{
     text-align: right;
@@ -43,18 +44,38 @@ h2{
     border: solid black 4px;
     border-radius: 10px;
 }
+ul{
+    background-color: rgba(255, 68, 0, 0.61);
+    border-radius: 10px;
+    width: 500px;
+    margin-right: auto;
+    margin-left: auto;
+
+}
 li{
     display: grid;
-    grid-template-rows: 0.25fr 1fr 1fr 1fr;
-   background-color: rgba(255, 68, 0, 0.61);
-    text-align: center;
-    border-radius: 10px;
+    grid-template-rows: 1fr 2fr;
+    border-bottom: solid black;
     justify-content: center;
     font-family: 'Montserrat', sans-serif; 
-    width: 500px;
-    margin: auto;
-}
+    margin-top: 10px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    
 
+}
+iframe{
+    border-radius: 15px;
+    height: 90px;
+    width: 100%;
+    text-align: center;
+  position: relative;
+    bottom: 25px;
+}
+.cancion{
+    text-align: center;
+}
 footer{
     background-color: rgba(255, 68, 0, 0.61);
     border-radius: 10px;
@@ -62,8 +83,7 @@ footer{
     display: grid;
     grid-template-columns: 2fr 1fr;
     margin-top: 10px;
-    position: fixed;
-    bottom: 0;
+  
     width: 100%;
 }
 .AgusLerej{
