--- a/css/detailartist.css
+++ b/css/detailartist.css
@@ -149,7 +149,7 @@ footer{
 }
 @media(max-width: 768px){
     .total{
-        grid-template-rows: 0.4fr 2fr 0.2fr;
+        grid-template-rows: 0.3fr 0.1fr 2fr 0.2fr;
     }
     header{
         height: 100px;
@@ -216,6 +216,6 @@ footer{
         margin: auto;
     }
     .total{
-        grid-template-rows: 1fr 4fr 0.2fr;
+        grid-template-rows: 0.3fr 0.1 0.5fr 0.2fr;
     }
 }
