--- a/css/detailgenre.css
+++ b/css/detailgenre.css
@@ -112,6 +112,13 @@ footer{
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         margin-top: 10px;
     }
+    .artists{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    img{
+        height: 200px;
+    }
     .AgusLerej{
         font-size: 12px;
         margin: auto;
@@ -130,5 +137,34 @@ footer{
         height: 15px;
         margin: auto;
         padding: 5px;
+    }
+}
+@media(max-width: 320px){
+    header{
+        display: grid;
+        grid-template-columns: none; 
+        align-items: center;
+        grid-template-rows: 0.5fr 0.5fr 0.5fr 0.5fr;
+        font-size: 8px;
+        height: 150px;
+        width: auto;
+    }
+    .logo{
+        height: 50px;
+        margin: auto;
+    }
+    .total{
+        display: grid;
+        grid-template-rows: 0.3fr 0.1fr 15fr 0.3fr;
+    }
+    .artists{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    img{
+        height: 100px;
+    }
+    .nombre{
+        font-size: 15px;
     }
 }
