--- a/css/detailtrack.css
+++ b/css/detailtrack.css
@@ -153,13 +153,14 @@ footer{
     }
     .total{
         display: grid;
-        grid-template-rows: 0.4fr 1.5fr 0.2fr;
+        grid-template-rows: 0.3fr 0.1fr 1.5fr 0.2fr;
     }
     .logo{
         height: 75px;
     }
     .album{
         grid-template-rows: 0.5fr 0.02fr;
+        margin-left: 0px;
     }
     .info{
         grid-template-rows: 0.2fr 0.2fr 0.2fr;
@@ -167,14 +168,19 @@ footer{
     .nombreAlbum{
         font-size: 20px;
     }
+
     h1{
         font-size: 30px;
     }
     .h2{
         font-size: 25px;
     }
+    .agregar{
+        margin-left: 30px;
+    }
     .agregados{
         margin: auto;
+        width: 500px;
     }
     .boton-play{
         height: 60px;
@@ -224,42 +230,43 @@ footer{
         margin: auto;
     }
     section{
-        grid-template-rows: 1fr 0.8fr;
+        grid-template-rows: 0.8fr 0.8fr;
         grid-template-columns: none;
         gap: 10px;
         border: solid white 1px;
-        
         margin-top: 50px;
         border: transparent;
         position: relative;
         bottom: 50px;
-        
-    
+        width: 200px;
     }
     .album{
-        margin: auto;
+        text-align: center;
+      
     }
     .fotoAlbum{
-        height: 150px;
-        
+        text-align: center;
+        height: 150px;   
     }
     h1{
         font-size: 25px;
-        line-height: 0.6;
+        line-height: 0.6;   
     }
     .h2{
-        font-size: 20px;
-    }
-    .agregados{
-        gap: 20px;
+        font-size: 20px;   
     }
     .agregar{
-        height: 60px;
-        position: relative;
-        top: 10px;
-        right: 10px;
-        width: 100%;
-        
+        height: 60px;        
+    }
+    .agregados{
+        height: 100%;
+        width: 200px;
+        grid-template-rows: 1fr 0.2fr;
+        grid-template-columns: 1fr;
+    }
+    iframe{
+        width: 90px;
+        margin: auto;
     }
     .AgusLerej{
         font-size: 10px;
