--- a/css/detailgenre.css
+++ b/css/detailgenre.css
@@ -149,6 +149,11 @@ footer{
         height: 150px;
         width: auto;
     }
+    .titulos{
+        border-top: solid rgba(0, 0, 0, 0.5);
+        width: 100%;
+       text-align: center;
+    }
     .logo{
         height: 50px;
         margin: auto;
