--- a/css/registro.css
+++ b/css/registro.css
@@ -1,9 +1,18 @@
-h1{
+header{
+    display: grid;
+    grid-template-columns: 0.65fr 1fr;
     background-color:  rgba(139, 39, 3, 0.918);
-    text-align: center;
-    border-radius: 10px;
     font-family: 'Patrick Hand', cursive;
-    font-size: 50px;
+    font-size: 20px;
+    border: white 5px;
+    font-family: 'Patrick Hand', cursive;
+    border: solid #353535 1.5px;
+    height: 100px;
+    padding: 15px;
+}
+.logo{
+    padding-left: 130px;
+    height: 100px;
 }
 body{
     background-image: url(../img/fondo2.jpg);
