--- a/css/detailtrack.css
+++ b/css/detailtrack.css
@@ -106,8 +106,7 @@ h2{
     color: white;
     margin: auto;
 }
-{
-margin: auto;
+{margin: auto;
     height: 40px;
     width: 120px;
     border-radius: 20px;
