--- a/css/detailartist.css
+++ b/css/detailartist.css
@@ -1,10 +1,36 @@
+.loader{
+    position: fixed;
+    z-index: 99;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.loader > img {
+    width: 100px;
+}
+.loader.hidden {
+    animation: fadeOut 3s;
+    animation-fill-mode: forwards;
+}
+@keyframes fadeOut {
+    100% {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
 .total{
     display: grid;
     grid-template-rows: 2fr 0.1fr 14fr 0.2fr;
 }
 header{
     display: grid;
-    background-color: rgba(139, 39, 3, 0.918);
+    background: rgb(0,0,0);
+    background: linear-gradient(90deg, rgba(0,0,0,1) 21%, rgba(213,9,9,0.7119368865710347) 30%, rgba(255,42,86,0.6895279229856005) 100%);
     grid-template-columns: 1fr 1fr 1fr 1fr;
     border: white 5px;
     font-family: 'Patrick Hand', cursive;
@@ -226,22 +252,22 @@ footer{
         margin: auto;
     }
     .total{
-        grid-template-rows: 0.3fr 0.1fr 8fr 0.2fr;
+        grid-template-rows: 0.3fr 0.1fr 10fr 0.2fr;
     }
     .arriba{
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 4fr;
+        grid-template-rows: 1fr 3fr;
     }
     .derecha{
-        grid-template-rows: 0.2fr 1fr;
+        grid-template-rows: 0.2fr 1.4fr;
         margin: auto;
     }
     section{
         width: 100%;
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 0.6fr 1fr;
+        grid-template-rows: 1fr 0.4fr;
     }
     .fotoArtista{
         height: 200px;
