--- a/css/playlist.css
+++ b/css/playlist.css
@@ -1,11 +1,12 @@
 .total{
     display: grid;
-    grid-template-rows: 0.4fr 0.1fr 10fr 0.2fr;
+    grid-template-rows: 0.4fr 0.1fr 5fr 0.2fr;
 }
 
 header{
     display: grid;
-    background-color: rgba(139, 39, 3, 0.918);
+    background: rgb(0,0,0);
+    background: linear-gradient(90deg, rgba(0,0,0,1) 21%, rgba(213,9,9,0.7119368865710347) 30%, rgba(255,42,86,0.6895279229856005) 100%);
     grid-template-columns: 1fr 1fr 1fr 1fr;
     border: white 5px;
     font-family: 'Patrick Hand', cursive;
@@ -153,7 +154,7 @@ footer{
 }
 @media(max-width: 320px){
     .total{
-        grid-template-rows: 0.25fr 0.01fr 1.5fr 0.01fr;
+        grid-template-rows: 0.25fr 0.01fr 2fr 0.01fr;
     display: grid;
     }
     header{
