--- a/css/registro.css
+++ b/css/registro.css
@@ -1,7 +1,8 @@
 header{
     display: grid;
     grid-template-columns: 0.65fr 1fr;
-    background-color:  rgba(139, 39, 3, 0.918);
+    background: rgb(0,0,0);
+    background: linear-gradient(90deg, rgba(0,0,0,1) 21%, rgba(213,9,9,0.7119368865710347) 30%, rgba(255,42,86,0.6895279229856005) 100%);
     font-family: 'Patrick Hand', cursive;
     font-size: 20px;
     border: white 5px;
