--- a/css/resultados.css
+++ b/css/resultados.css
@@ -1,10 +1,36 @@
+.loader{
+    position: fixed;
+    z-index: 99;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.loader > img {
+    width: 100px;
+}
+.loader.hidden {
+    animation: fadeOut 3s;
+    animation-fill-mode: forwards;
+}
+@keyframes fadeOut {
+    100% {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
 .total{
     display: grid;
-    grid-template-rows: 2fr 0.1fr 28fr 0.2fr;
+    grid-template-rows: 2fr 0.1fr 35fr 0.2fr;
 }
 header{
     display: grid;
-    background-color: rgba(139, 39, 3, 0.918);
+    background: rgb(0,0,0);
+    background: linear-gradient(90deg, rgba(0,0,0,1) 21%, rgba(213,9,9,0.7119368865710347) 30%, rgba(255,42,86,0.6895279229856005) 100%);
     grid-template-columns: 1fr 1fr 1fr 1fr;
     border: white 5px;
     font-family: 'Patrick Hand', cursive;
@@ -14,7 +40,42 @@ header{
     height: 100px;
     position: sticky;
     top: 0;
-    z-index: 1;
+}
+.logo{
+    margin: auto;
+    height: 100px;
+}
+.titulos{
+    margin: auto;
+}
+a{
+    text-decoration: none;
+    text-align: center;
+    color: black;
+}
+section{
+    margin-top: 10px;
+}
+.lista{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 10px;
+}
+.resultado{
+    display: grid;
+    grid-template-rows: 3fr 1fr;
+}
+img{
+    margin-left: auto;
+    margin-right: auto;
+}
+p{
+    color: white;
+    text-align: center;
+}
+form{
+    margin-top: 10px;
+    text-align: right;
 }
 footer{
     background-color: rgba(255, 68, 0, 0.61);
@@ -26,32 +87,6 @@ footer{
 }
 .AgusLerej{
     margin: auto;
-}
-section{
-    margin-left: auto;
-    margin-right: auto;
-}
-ul{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    margin: auto;
-}
-.li{
-    text-decoration: none;
-    display: grid;
-    grid-template-rows: 4fr 1fr;
-}
-p{
-    color: white;
-}
-img{
-    margin-left: auto;
-    margin-right: auto;
-}
-form{
-    margin-top: 10px;
-    text-align: right;
-    margin-bottom: 10px;
 }
 .facebook{
     height: 20px;
@@ -75,18 +110,7 @@ form{
 body{
     background-image: url(../img/fondo2.jpg);
 }
-.logo{
-    margin: auto;
-    height: 100px;
-}
-.titulos{
-    margin: auto;
-}
-a{
-    text-decoration: none;
-    text-align: center;
-    color: black;
-}
+
 @media(max-width: 768px){
     header{
         position: static;
@@ -97,7 +121,7 @@ a{
     .titulos{
         font-size: 25px;
     }
-    ul{
+    .lista{
         grid-template-columns: 1fr 1fr 1fr;
     }
     .logo{
@@ -141,14 +165,18 @@ a{
         width: 100%;
        text-align: center;
     }
+    .logo{
+        height: 50px;
+        margin: auto;
+    }
     .total{
         display: grid;
-        grid-template-rows: 0.4fr 0.1fr 10fr 0.3fr;
+        grid-template-rows: 0.4fr 0.1fr 10fr 0.1fr;
     }
     img{
         height: 100px;
     }
-    ul{
+    .lista{
         grid-template-columns: 1fr 1fr;
     }
     .AgusLerej{
