--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,7 @@ header{
 h1{
     text-align: center;
     color:black;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Patrick Hand', cursive;
     text-align: center;
     font-size: 16px;
     font-weight: none;
