--- a/css/playlist.css
+++ b/css/playlist.css
@@ -213,4 +213,8 @@ footer{
     .buscador{
         margin-top: 10px;
     }
+    footer{
+        position: absolute;
+        bottom: 0;
+    }
 }
