--- a/css/registro.css
+++ b/css/registro.css
@@ -42,7 +42,8 @@ footer{
     border: solid #353535 1.5px;
     display: grid;
     grid-template-columns: 2fr 1fr;
-    margin-top: 120px;
+    margin-top: 180px;
+    bottom: 0;
 }
 .AgusLerej{
     margin: auto;
@@ -84,4 +85,19 @@ footer{
     grid-template-columns: 1fr 3fr;
     padding: 5px;
     border-bottom: solid black;
+}
+@media(max-width: 320px){
+    body{
+        display: grid;
+        grid-template-columns: 1fr;
+        width: 100%;
+    }
+    h1{
+        display: none;
+    }
+    footer{
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+    }
 }
