--- a/css/detailalbum.css
+++ b/css/detailalbum.css
@@ -245,12 +245,13 @@ iframe{
 @media(max-width: 768px){
     .total{
         display: grid;
-        grid-template-rows: 0.4fr 2fr 0.2fr;
+        grid-template-rows: 0.4fr 0.1fr 10fr 0.1fr;
     }
     header{
         height: 100px;
         position: static;
     }
+  
     .logo{
         height: 75px ;
     }
