--- a/css/detailalbum.css
+++ b/css/detailalbum.css
@@ -306,6 +306,7 @@ iframe{
 }
 @media(max-width: 320px){
     header{
+        background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(213,9,9,0.7119368865710347) 30%, rgba(255,42,86,0.6895279229856005) 100%);
         display: grid;
         grid-template-columns: none; 
         align-items: center;
