--- a/css/detailtrack.css
+++ b/css/detailtrack.css
@@ -218,6 +218,7 @@ footer{
         grid-template-rows: 0.3fr 0.1fr 0.5fr 0.01fr ;
     }
     header{
+        background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(213,9,9,0.7119368865710347) 30%, rgba(255,42,86,0.6895279229856005) 100%);
         display: grid;
         grid-template-columns: none; 
         align-items: center;
