--- a/css/registro.css
+++ b/css/registro.css
@@ -100,4 +100,7 @@ footer{
         bottom: 0;
         width: 100%;
     }
+    header{
+        background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(213,9,9,0.7119368865710347) 30%, rgba(255,42,86,0.6895279229856005) 100%);
+    }
 }
