--- a/css/registro.css
+++ b/css/registro.css
@@ -10,7 +10,7 @@ header{
     font-family: 'Patrick Hand', cursive;
     font-size: 20px;
     border: white 5px;
-    font-family: 'Patrick Hand', cursive;
+    font-family: 'Archivo', sans-serif;
     border: solid #353535 1.5px;
     height: 100px;
     padding: 15px;
