--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@ header{
     background: linear-gradient(90deg, rgba(0,0,0,1) 21%, rgba(213,9,9,0.7119368865710347) 30%, rgba(255,42,86,0.6895279229856005) 100%);
     grid-template-columns: 1fr 1fr 1fr 1fr;
     border: white 5px;
-    font-family: 'Patrick Hand', cursive;
+    font-family: 'Archivo', sans-serif;
     font-size: 30px;
     padding: 15px;
     border: solid #353535 1.5px;
@@ -21,10 +21,11 @@ header{
 h1{
     text-align: center;
     color:black;
-    font-family: 'Patrick Hand', cursive;
+    font-family: 'Arvo', serif;
     text-align: center;
     font-size: 16px;
     font-weight: none;
+    
 }
 .logo{
     margin: auto;
@@ -148,7 +149,8 @@ a{
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     border: solid #353535 1.5px;
-    font-family: 'Patrick Hand', cursive;
+    font-family: 'Archivo', sans-serif;
+    font-weight: lighter;
     font-size: 20px;
 }
 .abajo{
