--- a/css/detailgenre.css
+++ b/css/detailgenre.css
@@ -82,6 +82,7 @@ img{
     text-align: center;
     margin-left: auto;
     margin-right: auto;
+    border-radius: 15px;
 }
 .nombre{
     color:white;
